--- a/app/templates/issue/index.html
+++ b/app/templates/issue/index.html
@@ -6,7 +6,7 @@
 {% block content %}
   <h1>Consultas</h1>
   {% for issue in issues %}
-    <li>{{ issue.email }} - {{ issue.description }} - {{ issue.category_id }} - {{ issue.status_id }}</li>
+    <li>{{ issue.email }} - {{ issue.description }} - {{ issue.category.name}} - {{ issue.status.name }}</li>
   {% endfor %}
   <a href="{{ url_for('home') }}" class="link">Volver</a>
   <a href="{{ url_for('issue_new') }}" class="link">Nuevo</a>
