--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,7 +3,7 @@
 {% block head %}
   {{ super() }}
 {% endblock %}
-{% block content %}
+{% block header %}
   <h1>Iniciar sesión</h1>
   <form action="{{ url_for('auth_authenticate') }}" method="POST">
     <input name="email" placeholder="Correo" required/>
