--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,11 +3,12 @@
   <head>
     {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
   </head>
   <body>
-
+    <!-- HEADER -->
     <header class="header">    
       
       <img id="logo" src="{{ url_for('static', filename='images/Logo.jpeg') }}" />
@@ -15,15 +16,17 @@
       {% block header %}
       {% endblock %}
     </header>
+    <!-- NAVBAR -->
+    <div id="navbar"> 
+      <ul> 
 
-    
-    <div id="navbar">
-      {% block navbar %}
+      {% block navbar%}
+      
       {% endblock %}
-    </div>
-    
-    
-    <div id="content">
+    </ul> 
+    </div> 
+
+    <div id="content right">
       {% with messages = get_flashed_messages() %}
         {% if messages %}
           <ul class=flashes>
