--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -18,15 +18,24 @@
     </header>
     <!-- NAVBAR -->
     <div id="navbar"> 
-      <ul> 
-
+      <ul>
+        {% if is_authenticated(session) %} 
+        <li><a href="http://github.com" >Administrar zonas inundables</a></li> 
+        <li><a href="{{ url_for('puntos_index') }}">Administrar puntos de encuentro</a></li> 
+        <li><a href="http://github.com">Administrar recorridos de evacuación</a></li> 
+        <li><a href="http://github.com">Administrar eventos</a></li> 
+        <li><a href="{{ url_for('user_index') }}">Reportar evento</a></li>       
+        {% endif %}
+        {% if tiene_permiso_administrador %}
+        <li><a href="{{ url_for('user_index') }}">Panel de usuarios</a></li>  
+        <li><a href="{{ url_for('user_index') }}">Configurar sistema</a></li> 
+        {% endif %}
       {% block navbar%}
-      
       {% endblock %}
     </ul> 
     </div> 
 
-    <div id="content right">
+    <div id="content ">
       {% with messages = get_flashed_messages() %}
         {% if messages %}
           <ul class=flashes>
