--- a/app/static/style.css
+++ b/app/static/style.css
@@ -24,10 +24,17 @@ body {
   overflow: hidden;
 }
 
-#footer {
-  width: 75%;
+.footer {
+  width: 100%;
+  height: 50px;
   margin: 0 auto;
   text-align: center;
+  background-color: #204784;
+  text-decoration: white;
+}
+.footer p{
+  color: white;
+  padding: 15px 0px 0px 0px;
 }
 
 #container {
@@ -56,18 +63,6 @@ a.link {
   letter-spacing: 1px;
 }
 
-.left{
-  float: left;
-}
-
-.right{
-  float: right;
-  width: 200px;
-  background-color: red;
-}
-
-
-
 #navbar ul { 
 	margin: 0; 
 	padding: 5px; 
@@ -91,6 +86,7 @@ a.link {
 	color: #000; 
 	background-color: #fff; 
 	} 
+
 
 
 
