formulario para la carga de usuario creado

--- a/app/templates/user/new.html
+++ b/app/templates/user/new.html
@@ -11,8 +11,19 @@
       <input name="email" placeholder="Correo"/>
     </p>
     <p>
+      <label>Username<label></br>
+      <input name="username" placeholder="username"/>
+    </p>
+    <p>
       <label>Clave<label></br>
       <input type="password" name="password" placeholder="Clave"/>
+    </p>
+    <p>
+      <label>¿Crear usuario activado?<label></br>
+      <select name='activo'>
+        <option value='0'>Desactivado</option>
+        <option value='1'>Activado</option>
+      </select>
     </p>
     <p>
       <label>Nombre<label></br>
