--- a/app/templates/user/index.html
+++ b/app/templates/user/index.html
@@ -6,7 +6,11 @@
 {% block content %}
   <h1>usuarios</h1>
   {% for user in users %}
-  <li>{{ user.email }} - {{ user.first_name }} - {{ user.last_name }} - {{ user.password }}</li>
+  <li>{{ user.email }} {{user.username}} - {{user.activo}} - {{ user.first_name }} - {{ user.last_name }}
+    {% if session["user"]== user.email %} 
+    - {{ user.password }}
+    {% endif %}
+  </li>
   {% endfor %}
   <a href="{{ url_for('home') }}" class="link">Volver</a>
   <a href="{{ url_for('user_new') }}" class="link">Nuevo</a>
