checkeo de mail valido realizado

--- a/app/templates/user/new.html
+++ b/app/templates/user/new.html
@@ -8,7 +8,7 @@
   <form action="{{ url_for('user_create') }}" method="POST">
     <p>
       <label>Email<label></br>
-      <input name="email" placeholder="Correo" required/>
+      <input type="email" name="email" placeholder="Correo" required/>
     </p>
     <p>
       <label>Username<label></br>
