activacion/desactivacion de usuario realizada

--- a/app/templates/user/index.html
+++ b/app/templates/user/index.html
@@ -9,9 +9,9 @@
     <tr>
       <th>Email</th>
       <th>Username</th>
-      <th>Estado</th>
       <th>Nombre</th>
       <th>apellido</th>
+      <th>Estado</th>
     </tr>
   {% for user in users %}
     {% if not session["user"]== user.email %} 
@@ -28,19 +28,6 @@
         </td>
         <a href="{{ url_for('user_edit') }}" class="usuario-listado">
         </a>
-        {% if user.activo %}
-          <td>
-            <a href="{{ url_for('user_edit') }}" class="usuario-listado"></a>
-              Activo
-            </a>
-          </td>
-        {% else %}
-           <td>
-            <a href="{{ url_for('user_edit') }}" class="usuario-listado"></a> 
-              Desactivado
-            </a>
-          </td>
-        {% endif %}
         <td>
           <a href="{{ url_for('user_edit') }}" class="usuario-listado">
             {{ user.first_name }}
@@ -51,10 +38,26 @@
             {{ user.last_name }}
           </a>
         </td>
-      </tr>
+        <td>
+        <form action="{{ url_for('user_edit_estado', username=user.username) }}" method="POST">
+          {% if user.activo %}
+            <select name='activo'>
+              <option value='1'>Activado</option>
+              <option value='0'>Desactivado</option>
+            </select>
+          {% else %}
+            <select name='activo'>
+              <option value='0'>Desactivado</option>
+              <option value='1'>Activado</option>
+            </select>
+          {% endif %}
+            <input type="submit" value="actualizar">
+        </form>
+          </td>
+        </tr>
       {% endif %}
-  </table> 
-  {% endfor %}
+      {% endfor %}
+    </table> 
   <a href="{{ url_for('home') }}" class="link">Volver</a>
   <a href="{{ url_for('user_new') }}" class="link">Nuevo</a>
 {% endblock %}
