--- a/app/templates/user/index.html
+++ b/app/templates/user/index.html
@@ -5,6 +5,15 @@
 {% endblock %}
 {% block content %}
   <h1>usuarios</h1>
+  <p>Filtrar por nombre y activo/desactivado:</p>
+  <form action="{{ url_for('user_search') }}" method="post">
+    <input type="search" placeholder="Nombre" name="first_name">
+    <select name='activo'>
+      <option value='1'>Activado</option>
+      <option value='0'>Desactivado</option>
+    </select>
+    <button type="submit">Filtrar</button>
+  </form>
   <table>
     <tr>
       <th>Email</th>
