funcion helper para validar permisos creada

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -25,7 +25,9 @@
   <h1>Inicio</h1>
   <p>Página de inicio de la aplicación</p>
   {% if is_authenticated(session) %}
-    <a href="{{ url_for('user_index') }}" class="link">Usuarios</a>
+    {% if has_permission(session, 'user_index') %}
+      <a href="{{ url_for('user_index') }}" class="link">Usuarios</a>
+    {% endif %}
     <a href="{{ url_for('auth_logout') }}" class="link">Cerrar sesión</a>
   {% else %}
     <a href="{{ url_for('auth_login') }}" class="link">Iniciar sesión</a>
