--- a/app/static/style.css
+++ b/app/static/style.css
@@ -10,8 +10,20 @@ body {
   background-color: #204784;
   width: 100%;
   margin: 0 auto;
-
+  display: inline-block;
 }
+
+.boton-usuario{
+  float: right;
+}
+
+#bienvenida{
+  font-size: 25px;
+  text-align: center;
+  color: #ffffff;
+}
+
+
 #logo{
   height:100px;
   width:100px;
@@ -31,10 +43,12 @@ body {
   text-align: center;
   background-color: #204784;
   text-decoration: white;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 .footer p{
   color: white;
-  padding: 15px 0px 0px 0px;
 }
 
 #container {
@@ -92,3 +106,64 @@ a.link {
   color: black;
 }
 
+
+ /* Dropdown Button */
+ .dropbtn {
+  display: inline-block;
+  background-color: #426aac;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  min-width: 160px;
+  text-align: left;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #ffffff;
+color: #000;} 
+
+
+.culo {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.culo li {
+  float: left;
+}
+
+.li-boton{
+  float: right  !important;
+  
+}
