--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,38 +3,57 @@
   <head>
     {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
   </head>
   <body>
-    <!-- HEADER -->
+    <!--------------------------HEADER ---------------------->
     <header class="header">    
-      
-      <img id="logo" src="{{ url_for('static', filename='images/Logo.jpeg') }}" />
-      <p>Bienvenidos a La Plata Floodn't</p>
-      {% block header %}
-      {% endblock %}
+
+      <ul class="culo">
+        <li><img id="logo" src="{{ url_for('static', filename='images/Logo.jpeg') }}" /></li>
+        <li><p id="bienvenida">Bienvenidos a La Plata Floodn't</p></li>
+        {% if not is_authenticated(session) %}
+          <li class="li-boton">
+            <form action="{{ url_for('auth_authenticate') }}" method="POST">
+              <input name="email" placeholder="Correo" required/>
+              <input type="password" name="password" placeholder="Clave" required/>
+              <input type="submit" value="Login">
+            </form> 
+          </li>
+        {% else %}
+          <li class="li-boton">
+            <div class="dropdown">
+              <button class="dropbtn">{{session["username"]}}</button>
+              <div class="dropdown-content">
+              <a href="#">Perfil</a>
+              <a href="{{ url_for('auth_logout') }}">Cerrar sesión</a>
+              </div>
+            </div> 
+          </li>
+          {% endif %}
+      </ul>
+      </div>
     </header>
-    <!-- NAVBAR -->
+    <!-- ------------------------NAVBAR -------------------->
     <nav id="navbar"> 
+      {% if is_authenticated(session) %} 
       <ul>
-        {% if is_authenticated(session) %} 
-        <li><a href="{{ url_for('zonas_index') }}" >Administrar zonas inundables</a></li> 
+      <li><a href="{{ url_for('zonas_index') }}" >Administrar zonas inundables</a></li> 
         <li><a href="{{ url_for('puntos_index') }}">Administrar puntos de encuentro</a></li> 
         <li><a href="{{ url_for('recorridos_index') }}">Administrar recorridos de evacuación</a></li> 
-        <li><a href="http://github.com">Administrar eventos</a></li> 
-        <li><a href="{{ url_for('user_index') }}">Reportar evento</a></li>       
+        <li><a href="#">Administrar eventos</a></li> 
+        <li><a href="{{ url_for('user_index') }}">Usuarios</a></li>       
         {% endif %}
         {% if tiene_permiso_administrador %}
         <li><a href="{{ url_for('user_index') }}">Panel de usuarios</a></li>  
         <li><a href="{{ url_for('user_index') }}">Configurar sistema</a></li> 
+      </ul> 
         {% endif %}
       {% block navbar%}
       {% endblock %}
-    </ul> 
     </nav> 
-
+    <!-- ------------------------CONTENT -------------------->
     <div id="content ">
       {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -43,13 +62,13 @@
             <li>{{ message }}</li>
           {% endfor %}
           </ul>
-        {% endif %}
-        
+        {% endif %}       
       {% endwith %}
       {% block content %}
       {% endblock %}
-      <div style="height: 500px;"></div>
     </div>
+
+    <!-- ------------------------ FOOTER -------------------- -->
     <footer class="footer">
       <p>Proyecto de software</p>
       {% block footer %}
