--- a/app/templates/zonas/index.html
+++ b/app/templates/zonas/index.html
@@ -5,9 +5,6 @@
 {% endblock %}
 {% block content %}
   <h1>Acá van a estar las zonas inundables</h1>
-  {% for user in users %}
-  <li>{{ user.email }} - {{ user.first_name }} - {{ user.last_name }} - {{ user.password }}</li>
-  {% endfor %}
   <a href="{{ url_for('home') }}" class="link">Volver</a>
-  <a href="{{ url_for('user_new') }}" class="link">Nuevo</a>
+  <a href="#" class="link">Nuevo</a>
 {% endblock %}
