--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -28,6 +28,7 @@
               <div class="dropdown-content">
               <a href="#">Perfil</a>
               <a href="{{ url_for('auth_logout') }}">Cerrar sesión</a>
+              <a href="{{ url_for('configuracion_index') }}">Configuracion</a>
               </div>
             </div> 
           </li>
