--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,13 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700');
 @import url('https://fonts.googleapis.com/css?family=Catamaran:400,800');
 body {
-  background-color: #67B7F2;
+  /* background-color: #67B7F2; */
   font-family: 'Montserrat', Helvetica, sans-serif;
   font-size: 14px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header{
-  background-color: #204784;
+  /* background-color: #204784; */
   width: 100%;
   margin: 0 auto;
   display: inline-block;
@@ -39,16 +42,13 @@ body {
 .footer {
   width: 100%;
   height: 50px;
-  margin: 0 auto;
+  margin: auto;
   text-align: center;
-  background-color: #204784;
-  text-decoration: white;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-}
-.footer p{
+  /* background-color: #204784; */
   color: white;
+  /* position: fixed;
+  left: 0;
+  bottom: 0; */
 }
 
 #container {
@@ -88,7 +88,7 @@ a.link {
 	padding: 5px; 
 	list-style-type: none; 
 	text-align: center; 
-	background-color: #204784; 
+	/* background-color: #204784;  */
 	} 
  
 #navbar ul li {  
@@ -99,7 +99,7 @@ a.link {
 	text-decoration: none; 
 	padding: .2em 1em; 
 	color: #fff; 
-	background-color: #204784; 
+	/* background-color: #204784;  */
 	} 
  
 #navbar ul li a:hover { 
@@ -116,7 +116,7 @@ a.link {
  /* Dropdown Button */
  .dropbtn {
   display: inline-block;
-  background-color: #426aac;
+  /* background-color: #426aac; */
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -168,15 +168,15 @@ color: #000;}
 }
 
 #formulario-configuracion{
-  margin: auto;
-  background: #204784;
+  margin: 10px auto 10px auto;
+  /* background: #204784; */
   width: 300px;
   border-radius: 10%;
   text-align: center;
   color: white;
 }
 
-#listaConfiguracion{
+.listaConfiguracion{
   margin: 0; 
 	padding: 5px; 
 	text-align: center; 
@@ -192,16 +192,27 @@ color: #000;}
   cursor: pointer;
 }
 
-#azul{
+.blue{
   background: #204784;
 }
-#rojo{
+.red{
   background: #842020;
 }
-#verde{
-  background: #208431;
+.green{
+  background: #63a86f;
 }
 
+.background-red {
+  background-color: red;
+}
+
+.background-blue {
+  background-color: blue;
+}
+
+.background-green {
+  background-color: #1c5003;
+}
 
 
 
@@ -218,3 +229,4 @@ color: #000;}
   float: right  !important;
   
 }
+
