Cambio de colores funcionando

--- a/app/templates/configuracion/configuracion.html
+++ b/app/templates/configuracion/configuracion.html
@@ -37,7 +37,7 @@
         </p>
         <p>
             <label>Elementos por página</label>
-            <input type="number" name="elementos_por_pagina">
+            <input type="number" name="elementos_por_pagina" required>
         </p>
         <p>
             <label>Criterio de ordenación</label><br>
