--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 <h1>Crear un usuario</h1>
-<form action="{{ url_for('user_create') }}" method="POST">
+<form action="{{ url_for('user_edit',id=id ) }}" method="POST">
     <p>
         <label>Email<label></br>
                 {% if errors["email"] %}
