--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,77 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    {% block head %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
-    <title>{% block title %}{% endblock %}</title>
-    {% endblock %}
-  </head>
-  <body>
-    <!--------------------------HEADER ---------------------->
-    <header class="header">    
 
-      <ul class="culo">
-        <li><img id="logo" src="{{ url_for('static', filename='images/Logo.jpeg') }}" /></li>
-        <li><p id="bienvenida">Bienvenidos a La Plata Floodn't</p></li>
-        {% if not is_authenticated(session) %}
-          <li class="li-boton">
-            <form action="{{ url_for('auth_authenticate') }}" method="POST">
-              <input name="email" placeholder="Correo" required/>
-              <input type="password" name="password" placeholder="Clave" required/>
-              <input type="submit" value="Login">
-            </form> 
-          </li>
-        {% else %}
-          <li class="li-boton">
-            <div class="dropdown">
-              <button class="dropbtn">{{session["username"]}}</button>
-              <div class="dropdown-content">
-              <a href="#">Perfil</a>
-              <a href="{{ url_for('auth_logout') }}">Cerrar sesión</a>
-              <a href="{{ url_for('configuracion_index') }}">Configuracion</a>
-              </div>
-            </div> 
-          </li>
-          {% endif %}
-      </ul>
+<head>
+  {% block head %}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+  <title>{% block title %}{% endblock %}</title>
+  {% endblock %}
+</head>
+
+<body>
+  <!--------------------------HEADER ---------------------->
+  <header class="header">
+
+    <ul class="culo">
+      <li><img id="logo" src="{{ url_for('static', filename='images/Logo.jpeg') }}" /></li>
+      <li>
+        <p id="bienvenida">Bienvenidos a La Plata Floodn't</p>
+      </li>
+      {% if not is_authenticated(session) %}
+      <li class="li-boton">
+        <form action="{{ url_for('auth_authenticate') }}" method="POST">
+          <input name="email" placeholder="Correo" required />
+          <input type="password" name="password" placeholder="Clave" required />
+          <input type="submit" value="Login">
+        </form>
+      </li>
+      {% else %}
+      <li class="li-boton">
+        <div class="dropdown">
+          <button class="dropbtn">{{session["username"]}}</button>
+          <div class="dropdown-content">
+            <a href="#">Perfil</a>
+            <a href="{{ url_for('auth_logout') }}">Cerrar sesión</a>
+            <a href="{{ url_for('configuracion_index') }}">Configuracion</a>
+          </div>
+        </div>
+      </li>
+      {% endif %}
+    </ul>
+    </div>
+  </header>
+  <!-- ------------------------NAVBAR -------------------->
+  <div class="container">
+
+    {% if is_authenticated(session) %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('zonas_index') }}">Administrar zonas
+                inundables</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('puntos_index') }}">Administrar puntos de
+                encuentro</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('recorridos_index') }}">Administrar recorridos de
+                evacuación</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Administrar eventos</a></li>
+            {% if has_permission(session, 'user_index') %}
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('user_index') }}">Usuarios</a></li>
+            {% endif %}
+          </ul>
+        </div>
       </div>
-    </header>
-    <!-- ------------------------NAVBAR -------------------->
-    <nav id="navbar"> 
-      {% if is_authenticated(session) %} 
-        <ul>
-        <li><a href="{{ url_for('zonas_index') }}" >Administrar zonas inundables</a></li> 
-          <li><a href="{{ url_for('puntos_index') }}">Administrar puntos de encuentro</a></li> 
-          <li><a href="{{ url_for('recorridos_index') }}">Administrar recorridos de evacuación</a></li> 
-          <li><a href="#">Administrar eventos</a></li> 
-          {% if has_permission(session, 'user_index') %}
-            <li><a href="{{ url_for('user_index') }}">Usuarios</a></li>       
-          {% endif %}
-        {% endif %}
-      </ul> 
       {% block navbar%}
       {% endblock %}
-    </nav> 
-    <!-- ------------------------CONTENT -------------------->
-    <div id="content ">
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          <ul class=flashes>
-          {% for message in messages %}
-            <li>{{ message }}</li>
-          {% endfor %}
-          </ul>
-        {% endif %}       
-      {% endwith %}
-      {% block content %}
-      {% endblock %}
-    </div>
+    </nav>
+    {% endif %}
+  </div>
+  <!-- ------------------------CONTENT -------------------->
+  <div id="content ">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul class=flashes>
+      {% for message in messages %}
+      <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+    {% block content %}
+    {% endblock %}
+  </div>
 
-    <!-- ------------------------ FOOTER -------------------- -->
-    <footer class="footer">
-      <p>Proyecto de software</p>
-      {% block footer %}
-      {% endblock %}
-    </footer>
-  </body>
+  <!-- ------------------------ FOOTER -------------------- -->
+  <footer class="footer">
+    <p>Proyecto de software</p>
+    {% block footer %}
+    {% endblock %}
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
