--- a/app/static/style.css
+++ b/app/static/style.css
@@ -4,6 +4,9 @@ body {
   background-color: #67B7F2;
   font-family: 'Montserrat', Helvetica, sans-serif;
   font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .header{
@@ -39,13 +42,11 @@ body {
 .footer {
   width: 100%;
   height: 50px;
-  margin: 0 auto;
   text-align: center;
   background-color: #204784;
   text-decoration: white;
-  position: fixed;
-  bottom: 0;
-  left: 0;
+
+  margin-top: auto;
 }
 .footer p{
   color: white;
