--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -4,65 +4,67 @@
 {{ super() }}
 {% endblock %}
 {% block content %}
-<h1>Editar información del usuario</h1>
-<form action="{{ url_for('user_edit',id=id ) }}" method="POST">
-    <p>
-        <label>Email<label></br>
-                {% if errors["email"] %}
-                <input value="{{fieldsInfo.email}}" type="email" name="email" placeholder="Correo" required
-                    style="box-shadow: 0 0 3px #CC0000" />
-                <p style="color:red"> {{errors["email"]}} </p>
-                {% else %}
-                <input value="{{fieldsInfo.email}}" type="email" name="email" placeholder="Correo" required />
-                {% endif %}
-    </p>
-    {% if errors[""] %}
-    <p style="color:red"> {{errors[""]}} </p>
-    {% else %}
-    {% endif %}
-    <p>
-        <label>Username<label></br>
-                {% if errors["username"] %}
-                <input value="{{fieldsInfo.username}}" name="username" placeholder="username" required
-                    style="box-shadow: 0 0 3px #CC0000" />
-                <p style="color:red"> {{errors["username"]}} </p>
-                {% else %}
-                <input value="{{fieldsInfo.username}}" name="username" placeholder="username" required />
-                {% endif %}
-    </p>
-    <p>
-        <label>Cambiar estado de usuario<label></br>
-                {% if fieldsInfo.activo %}
-                <select name='activo'>
-                    <option value='1'>Activado</option>
-                    <option value='0'>Desactivado</option>
-                </select>
-                {% else %}
-                <select name='activo'>
-                    <option value='0'>Desactivado</option>
-                    <option value='1'>Activado</option>
-                </select>
-                {% endif %}
-    </p>
-    <p>
-        <label>Nombre<label></br>
-                {% if errors %}
-                <input value="{{fieldsInfo.first_name}}" name="first_name" placeholder="Nombre" required />
-                {% else %}
-                <input value="{{fieldsInfo.first_name}}" name="first_name" placeholder="Nombre" required />
-                {% endif %}
-    </p>
-    <p>
-        <label>Apellido<label></br>
-                {% if errors %}
-                <input value="{{fieldsInfo.last_name}}" name="last_name" placeholder="Apellido" required />
-                {% else %}
-                <input value="{{fieldsInfo.last_name}}" name="last_name" placeholder="Apellido" required />
-                {% endif %}
-    </p>
-    <p>
-        <input type="submit" value="Actualizar">
-    </p>
-</form>
-<a href="{{ url_for('user_index') }}" class="link">Volver</a>
+<div class="container text-center">
+    <h1>Editar información del usuario</h1>
+    <form action="{{ url_for('user_edit',id=id ) }}" method="POST">
+        <p>
+            <label>Email<label></br>
+                    {% if errors["email"] %}
+                    <input value="{{fieldsInfo.email}}" type="email" name="email" placeholder="Correo" required
+                        style="box-shadow: 0 0 3px #CC0000" />
+                    <p style="color:red"> {{errors["email"]}} </p>
+                    {% else %}
+                    <input value="{{fieldsInfo.email}}" type="email" name="email" placeholder="Correo" required />
+                    {% endif %}
+        </p>
+        {% if errors[""] %}
+        <p style="color:red"> {{errors[""]}} </p>
+        {% else %}
+        {% endif %}
+        <p>
+            <label>Username<label></br>
+                    {% if errors["username"] %}
+                    <input value="{{fieldsInfo.username}}" name="username" placeholder="username" required
+                        style="box-shadow: 0 0 3px #CC0000" />
+                    <p style="color:red"> {{errors["username"]}} </p>
+                    {% else %}
+                    <input value="{{fieldsInfo.username}}" name="username" placeholder="username" required />
+                    {% endif %}
+        </p>
+        <p>
+            <label>Cambiar estado de usuario<label></br>
+                    {% if fieldsInfo.activo %}
+                    <select name='activo'>
+                        <option value='1'>Activado</option>
+                        <option value='0'>Desactivado</option>
+                    </select>
+                    {% else %}
+                    <select name='activo'>
+                        <option value='0'>Desactivado</option>
+                        <option value='1'>Activado</option>
+                    </select>
+                    {% endif %}
+        </p>
+        <p>
+            <label>Nombre<label></br>
+                    {% if errors %}
+                    <input value="{{fieldsInfo.first_name}}" name="first_name" placeholder="Nombre" required />
+                    {% else %}
+                    <input value="{{fieldsInfo.first_name}}" name="first_name" placeholder="Nombre" required />
+                    {% endif %}
+        </p>
+        <p>
+            <label>Apellido<label></br>
+                    {% if errors %}
+                    <input value="{{fieldsInfo.last_name}}" name="last_name" placeholder="Apellido" required />
+                    {% else %}
+                    <input value="{{fieldsInfo.last_name}}" name="last_name" placeholder="Apellido" required />
+                    {% endif %}
+        </p>
+        <p>
+            <input type="submit" value="Actualizar">
+        </p>
+    </form>
+    <a href="{{ url_for('user_index') }}" class="link">Volver</a>
+</div>
 {% endblock %}
