--- a/app/templates/user/index.html
+++ b/app/templates/user/index.html
@@ -4,17 +4,19 @@
 {{ super() }}
 {% endblock %}
 {% block content %}
-<div class="container">
-  <h1>usuarios</h1>
-  <p>Filtrar por nombre y/o activo/desactivado:</p>
-  <form action="{{ url_for('user_search') }}" method="post">
-    <input type="search" placeholder="Nombre" name="first_name">
-    <select name='activo'>
-      <option value='1'>Activado</option>
-      <option value='0'>Desactivado</option>
-    </select>
-    <button type="submit">Filtrar</button>
-  </form>
+<div class="container text-center">
+  <div class="container mb-2">
+    <h1>usuarios</h1>
+    <p>Filtrar por nombre y/o activo/desactivado:</p>
+    <form action="{{ url_for('user_search') }}" method="post">
+      <input type="search" placeholder="Nombre" name="first_name">
+      <select name='activo'>
+        <option value='1'>Activado</option>
+        <option value='0'>Desactivado</option>
+      </select>
+      <button type="submit">Filtrar</button>
+    </form>
+  </div>
   <div class="table-responsive">
 
     <table class="table table-striped table-border table-sm">
